--- a/gui/Site.Master
+++ b/gui/Site.Master
@@ -1,4 +1,4 @@
-﻿<%@ Master Language="C#" AutoEventWireup="true" CodeBehind="Site.master.cs" Inherits="gui.Site" %>
+﻿<%--<%@ Master Language="C#" AutoEventWireup="true" CodeBehind="Site.master.cs" Inherits="gui.Site" %>--%>
 
 <!DOCTYPE html>
 <html>
